Configuration changes for yarn

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "to-do-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": "1.22.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,12 +15,10 @@
     "uuid": "^8.3.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
